fix overflow bug

--- a/style/global.css
+++ b/style/global.css
@@ -7,6 +7,7 @@
 }
 
 body {
+    width: 100vw;
     margin: 0;
     overflow-x: hidden;
     background-color: #e5e5f7;
@@ -85,13 +86,11 @@ main button {
     margin: 2em;
 }
 
-.text-1 p {
-    max-width: 60%;
-}
-
+.text-1 p,
 .text-1 li {
     max-width: 60%;
 }
+
 
 .info-1 {
     margin: 2em 0;
@@ -109,6 +108,7 @@ main button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
 .cta3 img {
@@ -116,18 +116,20 @@ main button {
 }
 
 .organizer {
-    padding: 1em;
+    padding: 0.5em;
     display: flex;
     flex-direction: row;
     border-radius: 10px;
-    border: dotted 2px blue;
+    border: solid 2px transparent;
     width: fit-content;
+    background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
 }
 
 .org-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 2em;
+    overflow: hidden;
 }
 
 .organizer img {
@@ -136,7 +138,7 @@ main button {
 }
 
 .organizer span {
-    margin: 0 1em;
+    margin: 0 0.5em;
 }
 
 em {
@@ -167,17 +169,38 @@ li {
 }
 
 @media screen and (max-width: 500px) {
-    main>div>h1 {
-        margin: 0 0.2em !important;
-        fontsize: 1em !important;
+    main {
+        flex-direction: column;
+        width: 100vw;
     }
 
-    main>span {
-        margin-top: 1em !important;
+    .hero-cover {
+        width: 100vw;
+        font-size: 1.4em;
     }
 
-    .landingPage {
-        margin: 0 0 !important;
+    .sponsors img {
+        max-width: 50px;
+    }
+
+    .text-1 p,
+    .text-1 li {
+        max-width: 100%;
+    }
+
+    .org-grid {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .info-1 {
+        flex-direction: column-reverse;
+    }
+
+    .info-1 img {
+        max-width: 80vw;
     }
 }
 
